--- a/code/Sec2-Estimation-With-Extrinsic-Labels.ipynb
+++ b/code/Sec2-Estimation-With-Extrinsic-Labels.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9a032e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "963b6439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +99,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a9cb8c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5b7a6499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d1397df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4dcdf84b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +288,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "89c8d6df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f7bd6135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +327,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a4e63a9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ce57243c",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +361,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d163f209",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eeed86c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +392,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "52ae56a1",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +410,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4e409f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "793a4e6a",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +487,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f7793a4",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +524,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c3fa6271",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "44a4f9cb",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +633,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "63291aca",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +672,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f43c67c3",
    "metadata": {},
    "source": [
     "# Put all figures together"
@@ -699,7 +679,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7fbc29d",
    "metadata": {},
    "source": [
     "## If the data generating process is $\\mathcal{Y} \\rightarrow \\mathcal{X}$\n",
@@ -719,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12ad5543",
    "metadata": {},
    "source": [
     "## Explaining with the sentiment analysis task\n",
@@ -745,7 +723,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "31237b0f",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +751,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7c238ffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +776,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f6b25d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5908da05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +937,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bb7e4adc",
    "metadata": {
     "scrolled": false
    },
@@ -992,7 +965,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9618f8a7",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +987,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d0571a",
    "metadata": {},
    "source": [
     "## Inference process"
@@ -1024,7 +995,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "db4d6f17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1204,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fdbf2a7e",
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1241,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adab6165",
    "metadata": {},
    "source": [
     "# If the data generating process is $\\mathcal{X} \\rightarrow \\mathcal{Y}$\n",
@@ -1291,7 +1259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40884fb9",
    "metadata": {},
    "source": [
     "## Explaining with the house price prediction task\n",
@@ -1313,7 +1280,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "519af671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1388,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "779adeff",
    "metadata": {},
    "outputs": [
     {
@@ -1447,14 +1412,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72e4a09f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "22743672",
    "metadata": {},
    "source": [
     "# Sensivity analysis"
@@ -1462,7 +1425,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afa2c12",
    "metadata": {},
    "source": [
     "# "
@@ -1471,7 +1433,6 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "186d4751",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1483,6 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "de04b636",
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1523,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "baddc07b",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1577,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fdc7f4e2",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1615,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1d351973",
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1670,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d1ec3664",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1722,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5b5f4dc3",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1797,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "acef93b1",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1817,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9730c025",
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1936,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c329afa5",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +1976,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8e65ff23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2037,7 +1988,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a8629856",
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2107,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f3811c43",
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2226,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e63aacee",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2290,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d4d5a7d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,7 +2299,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b60ddcba",
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2390,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "82a56787",
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2481,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ed838c08",
    "metadata": {},
    "outputs": [
     {
@@ -2590,7 +2534,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb49ea6",
    "metadata": {},
    "source": [
     "# data simulator for the tutorial"
@@ -2598,7 +2541,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de0c9f4",
    "metadata": {},
    "source": [
     "A joint distribution can be discomposed into two kinds of plots:\n",
@@ -2610,7 +2552,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "268acaba",
    "metadata": {},
    "source": [
     "What we want?\n",
@@ -2621,7 +2562,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "668a270e",
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2593,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0806c06c",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2624,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f57f97",
    "metadata": {},
    "source": [
     "## Extrapolation Phase"
@@ -2694,7 +2632,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "43c07814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2705,7 +2642,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "efd89e28",
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2696,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cc6085d4",
    "metadata": {},
    "outputs": [
     {
@@ -2833,7 +2768,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "70e342ca",
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2840,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8eea2a1b",
    "metadata": {},
    "outputs": [
     {
@@ -2979,7 +2912,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ac065796",
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +2959,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "56fa3c8c",
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3006,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "80797a6e",
    "metadata": {},
    "outputs": [
     {
@@ -3149,7 +3079,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "498f0128",
    "metadata": {},
    "outputs": [
     {
@@ -3193,7 +3122,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a9ea691f",
    "metadata": {},
    "outputs": [
     {
@@ -3301,7 +3229,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9191cb11",
    "metadata": {},
    "outputs": [
     {
@@ -3345,7 +3272,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0bcc32bb",
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3386,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c5251335",
    "metadata": {},
    "outputs": [
     {
@@ -3504,7 +3429,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "85533faf",
    "metadata": {},
    "outputs": [
     {
@@ -3620,7 +3544,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9c70e2fe",
    "metadata": {},
    "outputs": [
     {
@@ -3733,7 +3656,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "49b34a37",
    "metadata": {},
    "outputs": [
     {
@@ -3777,7 +3699,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6527c5ec",
    "metadata": {},
    "outputs": [
     {
@@ -3910,7 +3831,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5422b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3936,7 +3856,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2960c713",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3944,7 +3863,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8581fee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4089,7 +4007,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59682946",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4097,7 +4014,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5686b423",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4105,7 +4021,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1836ebf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4113,7 +4028,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a95bce1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4121,7 +4035,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1281bf1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4129,7 +4042,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41bd586f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4137,7 +4049,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62fbf404",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4145,7 +4056,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c699db3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4153,7 +4063,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "639062c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4161,7 +4070,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ac5b668",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4169,7 +4077,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08ec34f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4177,7 +4084,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7fa53a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4185,7 +4091,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f06cc6",
    "metadata": {
     "scrolled": false
    },
@@ -4466,7 +4371,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd3a7cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4474,9 +4378,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hot",
+   "display_name": "twitter-sampling",
    "language": "python",
-   "name": "hot"
+   "name": "twitter-sampling"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4488,7 +4392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
