update mixture model class

--- a/code/Sec1-Data-Profiling-And-Three-Wrong-Approaches.ipynb
+++ b/code/Sec1-Data-Profiling-And-Three-Wrong-Approaches.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3f473a5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "cac2ed87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "604cbf8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "5f09e049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "8920d8bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6100555f",
    "metadata": {},
    "source": [
     "# Load dataset"
@@ -79,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f3c2225",
    "metadata": {},
    "source": [
     "## dataset1"
@@ -87,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ca87804b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "1daceb1a",
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "60cfd6bb",
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "b49a5982",
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "72171ae9",
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "175892b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "9d78972a",
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "fdd42232",
    "metadata": {},
    "outputs": [
     {
@@ -420,6 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "3d9b639d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "bbe9000e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,6 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "8fc10a60",
    "metadata": {},
    "outputs": [
     {
@@ -458,6 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "ca4656f7",
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "bf3bc8a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,6 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "b7ab0e20",
    "metadata": {},
    "outputs": [
     {
@@ -724,6 +745,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "068864a1",
    "metadata": {},
    "source": [
     "# Let's first try some approaches\n",
@@ -735,6 +757,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3d45845",
    "metadata": {},
    "source": [
     "## 1. Classify and Count (threshold = 0.5)"
@@ -743,6 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "174f1ca6",
    "metadata": {},
    "outputs": [
     {
@@ -765,6 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "1ba9e8f9",
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +809,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d1e46b9",
    "metadata": {},
    "source": [
     "## 2. Probabilistic Estimator"
@@ -792,6 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "d665e2dd",
    "metadata": {},
    "outputs": [
     {
@@ -813,6 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "a77c4d0d",
    "metadata": {},
    "outputs": [
     {
@@ -832,6 +860,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed306868",
    "metadata": {},
    "source": [
     "# 3. Now assume we have some budget to label some data"
@@ -840,6 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "0e7b5c04",
    "metadata": {},
    "outputs": [
     {
@@ -860,6 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "cc5b286f",
    "metadata": {},
    "outputs": [
     {
@@ -880,6 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "57f874e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,6 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "19cb1e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,6 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "7839d1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,6 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "b4ba22b2",
    "metadata": {},
    "outputs": [
     {
@@ -928,6 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "27ed3757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,6 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "d3412ad4",
    "metadata": {},
    "outputs": [
     {
@@ -957,6 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "1dcf560a",
    "metadata": {},
    "outputs": [
     {
@@ -979,6 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "aad4cd1e",
    "metadata": {},
    "outputs": [
     {
@@ -1119,6 +1158,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb00922f",
    "metadata": {},
    "source": [
     "## 3.1 Learn the optimal threshold by F1"
@@ -1127,6 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "9d5386fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,6 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "7fe93847",
    "metadata": {},
    "outputs": [
     {
@@ -1156,6 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "f63418ca",
    "metadata": {},
    "outputs": [
     {
@@ -1177,6 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "fad0361e",
    "metadata": {},
    "outputs": [
     {
@@ -1197,6 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "009cf839",
    "metadata": {},
    "outputs": [
     {
@@ -1217,6 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "8b416df9",
    "metadata": {},
    "outputs": [
     {
@@ -1246,6 +1292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c91c7b7e",
    "metadata": {},
    "source": [
     "## with the best threshold"
@@ -1254,6 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "542a463e",
    "metadata": {},
    "outputs": [
     {
@@ -1274,6 +1322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b67b100",
    "metadata": {},
    "source": [
     "## 3.2 learn a platt scaling function"
@@ -1282,6 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "2cd22975",
    "metadata": {},
    "outputs": [
     {
@@ -1319,6 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "713ef175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,6 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "fa426d4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,6 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "e27d87e3",
    "metadata": {},
    "outputs": [
     {
@@ -1374,6 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "30dc40c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,6 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "493713f9",
    "metadata": {},
    "outputs": [
     {
@@ -1402,6 +1457,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "554992fc",
    "metadata": {},
    "source": [
     "## 3.3 learn the class-conditional density function"
@@ -1410,6 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "1c59c687",
    "metadata": {},
    "outputs": [
     {
@@ -1445,6 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "8c19fe47",
    "metadata": {},
    "outputs": [
     {
@@ -1467,6 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "cb185a70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,6 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "cee96200",
    "metadata": {},
    "outputs": [
     {
@@ -1499,6 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "304da085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,6 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "9b9d48d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,6 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "45132d94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,6 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "cda4c7b0",
    "metadata": {},
    "outputs": [
     {
@@ -1556,6 +1620,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8ce6e87",
    "metadata": {},
    "source": [
     "# 4. estimate for the target period"
@@ -1563,6 +1628,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84538ddc",
    "metadata": {},
    "source": [
     "## 4.1 PCC"
@@ -1571,6 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "4dd2aff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,6 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "6906557e",
    "metadata": {},
    "outputs": [
     {
@@ -1599,6 +1667,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c6a249c",
    "metadata": {},
    "source": [
     "## 4.2 MM"
@@ -1607,6 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "109f2365",
    "metadata": {},
    "outputs": [
     {
@@ -1629,6 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "ea3a7639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,6 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "a7ca9c7a",
    "metadata": {},
    "outputs": [
     {
@@ -1665,6 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "799f187d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1672,9 +1745,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "twitter-sampling",
+   "display_name": "hot",
    "language": "python",
-   "name": "twitter-sampling"
+   "name": "hot"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1686,7 +1759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
