--- a/code/Sec0-Data-Generating.ipynb
+++ b/code/Sec0-Data-Generating.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99476149",
    "metadata": {},
    "source": [
     "# Generating Simulated Data for Prevalence Estimation Tasks\n",
@@ -36,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a051fc14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7179fe29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90bc6680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +81,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "899e134c",
    "metadata": {},
    "source": [
     "## Intrinsic Labels $GT \\rightarrow \\mathcal{X}$"
@@ -93,7 +88,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2cc3d1",
    "metadata": {},
    "source": [
     "### If the data generating process is $GT \\rightarrow \\mathcal{X}$\n",
@@ -113,7 +107,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5241aadb",
    "metadata": {},
    "source": [
     "## Explaining with the sentiment analysis task\n",
@@ -139,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "60735dd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2c7a64c3",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b737e0f6",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "40624e9e",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "789aea45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +380,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "94eb8668",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +408,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5c2ee09c",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +435,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ed6cd7",
    "metadata": {},
    "source": [
     "## Extrinsic Labels $\\mathcal{X} \\rightarrow GT$"
@@ -458,7 +443,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4e773412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +597,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bf17fd3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +611,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "61ef1777",
    "metadata": {
     "scrolled": false
    },
@@ -675,7 +657,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "800ad0f4",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +701,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0a1e1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -728,9 +708,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hot",
+   "display_name": "twitter-sampling",
    "language": "python",
-   "name": "hot"
+   "name": "twitter-sampling"
   },
   "language_info": {
    "codemirror_mode": {
@@ -742,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
